# gameboy-emu

./: .cproject  .project  CMakeLists.txt  GameboyConfig.h.in  Opcodes.h  README  Z80.c  Z80.cpp  Z80.h  background.cpp  background.h  cartridge.c  cartridge.h  cpuloop.cpp  cpuloop.h  debugDialog.ui  debugcounters.h  debugdialog.cpp  debugdialog.h  joystick.cpp  joystick.h  lcd.c  lcd.h  lcdui.cpp  lcdui.h  ld_test.cpp  ld_test.h  lockuptables.h  lookuptables.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memdump  memory.c  memory.h  no_sillywarnings.h  oamDialog.ui  oamdialog.cpp  oamdialog.h  (+3 more)
python-playground/: .project  .pydevproject
python-playground/src/: main.py  test.py
